runFormatTest(import.meta, ["typescript"], { bracketSpacing: true });
runFormatTest(import.meta, ["typescript"], { bracketSpacing: false });
